manifest/test/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: app
  name: go-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "localhost"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: go-app-svc
              port:
                number: 80
